syntax = "proto3";
package rental.v1;
option go_package="coolcar/blob/api/gen/v1;blobpb";


message CreateBlobRequest {
    string account_id = 1;
    int32 upload_url_timeout_sec = 2;
}

message CreateBlobResponse {
    string id = 1;
    string upload_url = 2;
}


service BlobService {
  rpc CreateBlob(CreateBlobRequest) returns (CreateBlobResponse) {}
}